Fixing nav error on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,10 +29,7 @@ html {
   height: 100%;
   /*scroll-behavior: smooth;*/
 }
-/* //// for right margin on mobile ////     */
-html, body {
-  overflow-x: hidden;
-}
+
 
 body {
     height: 100%;
